Etape 2: Codez la page de connexion

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,22 +9,18 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script type="module" src="./assets/script/config.js" defer></script>
+	<link rel="stylesheet" href="./assets/header.css">
+	<link rel="stylesheet" href="./assets/footer.css">
+	<link rel="stylesheet" href="./assets/projets.css">
+	<script type="module" src="./assets/script/functions.js" defer></script>
 	<script type="module" src="./assets/script/projets.js" defer></script>
-	<script type="module" src="./assets/script/script.js" defer></script>
+	
 </head>
+
 <body>
-<header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-</header>
+
+<div id="header-placeholder"></div>
+
 <main>
 	<section id="introduction">
 		<figure>
@@ -59,12 +55,7 @@
 	</section>
 </main>
 
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
+<div id="footer-placeholder"></div>
+
 </body>
 </html>
