--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -8,9 +8,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="stylesheet" href="./assets/header.css">
-	<link rel="stylesheet" href="./assets/footer.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/header.css">
+	<link rel="stylesheet" href="./assets/css/footer.css">
 	<script type="module" src="./assets/script/functions.js" defer></script>
 	<script type="module" src="./assets/script/login.js" defer></script>
     
