--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -8,10 +8,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/global.css">
 	<script type="module" src="./assets/script/projets.js" defer></script>
-    <script type="module" src="./assets/script/script.js" defer></script>
 </head>
+
 <body>
     <div id="header-placeholder"></div>
 <main>
