--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,17 +8,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/css/style.css">
-	<link rel="stylesheet" href="./assets/css/header.css">
-	<link rel="stylesheet" href="./assets/css/footer.css">
-	<link rel="stylesheet" href="./assets/css/projets.css">
+	<link rel="stylesheet" href="./assets/css/global.css">
+	<link rel="stylesheet" href="./assets/css/index.css">
 	<link rel="stylesheet" href="./assets/css/modal.css">
 	<script src="https://kit.fontawesome.com/5d6dcc7e2f.js" crossorigin="anonymous"></script>
 	<script type="module" src="./assets/script/functions.js" defer></script>
 	<script type="module" src="./assets/script/modal/modal_fct.js" defer></script>	
 	<script type="module" src="./assets/script/projets.js" defer></script>
 	<script type="module" src="./assets/script/modal/modal.js" defer></script>
-
 
 	
 </head>
@@ -30,7 +27,7 @@
 <main>
 	<section id="introduction">
 		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
+			<img src="./assets/images/sophie-bluel.png" alt="Portrait de Sophie Bluel">
 		</figure>
 		<article>
 			<h2>Designer d'espace</h2>
