Ajout de la banderole 'Mode édition'

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,10 +17,11 @@
 	<script type="module" src="./assets/script/projets.js" defer></script>
 	<script type="module" src="./assets/script/modal/modal.js" defer></script>
 
-	
 </head>
 
 <body>
+
+<div id="edit-header" style="display: none;"><i class="fa-regular fa-pen-to-square"></i>Mode édition</div>
 
 <div id="header-placeholder"></div>
 
