La photo s'affiche en preview dans le formulaire de la modale

--- a/FrontEnd/modal.html
+++ b/FrontEnd/modal.html
@@ -25,6 +25,8 @@
                  <label for="imageUpload" class="custom-file-upload">
                     <i class="fa-regular fa-image"></i> 
                     <p class="modal-form-txt">+ Ajouter photo</p>
+                    <!-- Prévisualisation de l'image -->
+                    <img id="imagePreview" src="" alt="Prévisualisation de l'image" style="display:none; max-width: 50%; height: auto;"/>
                     <input 
                         type="file" 
                         name="image"
