Debut de travail sur le header en responsive avec menu humburger

--- a/FrontEnd/header.html
+++ b/FrontEnd/header.html
@@ -1,12 +1,22 @@
 <header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">projets</a></li>
-            <li><a href="#">contact</a></li>
-            <li id="btn-login"><a href="login.html">login</a></li>
-            <li id="btn-logout" style="display: none;"><a href="#">logout</a></li>
-            <li><a href="https://www.instagram.com"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
-        </ul>
-    </nav>
+    <div class="header-titre-menu">
+        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <nav>
+            <div class="menu-toggle" id="menu-toggle">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+            <ul>
+                <li><a href="index.html">projets</a></li>
+                <li><a href="#">contact</a></li>
+                <li id="btn-login"><a href="login.html">login</a></li>
+                <li id="btn-logout" style="display: none;"><a href="#">logout</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="logo-social">
+        <a href="https://www.instagram.com"><img src="./assets/icons/instagram.png" alt="Instagram"></a>
+    </div>
 </header>
