Visuel très proche de la maquette + début du responsive tablette et mobile

--- a/FrontEnd/header.html
+++ b/FrontEnd/header.html
@@ -1,4 +1,5 @@
-<header>
+<div id="edit-header" style="display: none;"><i class="fa-regular fa-pen-to-square"></i>Mode édition</div>
+<div class="header-global">
     <div class="header-titre-menu">
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
@@ -15,8 +16,8 @@
             </ul>
         </nav>
     </div>
-
     <div class="logo-social">
-        <a href="https://www.instagram.com"><img src="./assets/icons/instagram.png" alt="Instagram"></a>
+        <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
     </div>
-</header>
+</div>
+
