--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,9 +19,7 @@
 
 <body>
 
-<div id="edit-header" style="display: none;"><i class="fa-regular fa-pen-to-square"></i>Mode édition</div>
-
-<div id="header-placeholder"></div>
+<header id="header-placeholder"></header>
 
 <main>
 	<section id="introduction">
